# reguq

./: .gitignore  CHANGELOG.md  FUTURE_WORK.md  GUIDE.md  README.md  RELEASE.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  github-release.yml  publish-pypi.yml
Data_folder/Conformal_Predictions(MAPIE,PUNCC)/: CatBoost.xlsx  Conformal Predictions(MAPIE,PUNCC).ipynb  HGBM.xlsx  NGBoost.xlsx
Data_folder/Conformal_Predictions(NEXCP,AdaptiveCP,mfcs)/: Conformal_Predictions(NEXCP, Adaptive CP, mfcs).ipynb  TabNet.xlsx
Data_folder/HyperParameter_Tuning/: Optuna_autosampler.ipynb
Data_folder/Probabilistic_Distribution/: Probabilistic__Distribution.ipynb
Data_folder/Probabilistic_Distribution(CARD)/: GPBoost.xlsx  Gradient Boosting.xlsx  LightGBM.xlsx  PGBM.xlsx  Probabilistic__Distribution(CARD).ipynb
Data_folder/Quantile_Regression/: Quantile_Regression.ipynb
examples/: pipeline_config.yaml  quickstart.py  reguq_colab_check.ipynb  tutorial.ipynb
src/reguq/: __init__.py  api.py  charts.py  colab.py  config.py  conformal_advanced.py  conformal_standard.py  constants.py  data.py  explainability.py  export.py  metrics.py  params.py  preprocess.py  probabilistic.py  probabilistic_advanced.py  quantile.py  registry.py  runner.py  tuning.py  types.py
tests/: conftest.py  test_charts.py  test_colab.py  test_config.py  test_data.py  test_export.py  test_params.py  test_phases.py  test_registry.py  test_runner.py
